# robotcode

./: Cargo.toml  pyproject.toml
.github/workflows/: build-test-package-publish.yml  codeql.yml  rust-binary-build.yml  rust-checks.yml
crates/robotcode/: Cargo.toml
crates/robotcode-analyze/: Cargo.toml
crates/robotcode-analyze/src/: analyze.rs  cache.rs  lib.rs
crates/robotcode-analyze/tests/: analyze_test.rs
crates/robotcode-core/: Cargo.toml
crates/robotcode-core/src/: async_tools.rs  documents_manager.rs  event.rs  filewatcher.rs  lib.rs  lsp_types.rs  text_document.rs  uri.rs  workspace.rs
crates/robotcode-core/src/utils/: dataclasses.rs  logging.rs  mod.rs  path.rs
crates/robotcode-core/tests/: snapshots_test.rs
crates/robotcode-core/tests/snapshots/: snapshots_test__snapshot_camel_case_conversions.snap  snapshots_test__snapshot_snake_case_conversions.snap  snapshots_test__snapshot_text_document_after_incremental_edit.snap  snapshots_test__snapshot_text_document_initial.snap  snapshots_test__snapshot_uri_components.snap  snapshots_test__snapshot_uri_display.snap
crates/robotcode-debugger/: Cargo.toml
crates/robotcode-debugger/src/: dap_types.rs  debugger.rs  launcher.rs  lib.rs  protocol.rs  server.rs
crates/robotcode-debugger/tests/: dap_types_test.rs  debugger_test.rs  protocol_test.rs
crates/robotcode-jsonrpc2/: Cargo.toml
crates/robotcode-jsonrpc2/src/: lib.rs
crates/robotcode-language-server/: Cargo.toml
crates/robotcode-language-server/src/: lib.rs  server.rs
crates/robotcode-language-server/src/handlers/: code_actions.rs  code_lens.rs  completion.rs  document_symbols.rs  folding_range.rs  formatting.rs  goto.rs  highlight.rs  hover.rs  inlay_hints.rs  mod.rs  references.rs  rename.rs  selection_range.rs  semantic_tokens.rs  signature_help.rs  text_document.rs  utils.rs  workspace_symbols.rs
crates/robotcode-python-bridge/: Cargo.toml
crates/robotcode-python-bridge/src/: error.rs  lib.rs  mock.rs  subprocess.rs  types.rs
crates/robotcode-python-bridge/tests/: bridge_test.rs
crates/robotcode-repl/: Cargo.toml
crates/robotcode-repl/src/: eval.rs  history.rs  lib.rs  server.rs
crates/robotcode-rf-parser/: Cargo.toml
crates/robotcode-rf-parser/src/: escaping.rs  lib.rs  variables.rs  versions.rs  visitor.rs
crates/robotcode-rf-parser/src/lexer/: mod.rs  tokens.rs
crates/robotcode-rf-parser/src/parser/: ast.rs  mod.rs
crates/robotcode-rf-parser/tests/: parser_test.rs
crates/robotcode-rf-parser/tests/snapshots/: parser_test__snapshot_parse_control_flow.snap  parser_test__snapshot_parse_keywords.snap  parser_test__snapshot_parse_settings.snap  parser_test__snapshot_parse_simple.snap  parser_test__snapshot_parse_variables.snap
crates/robotcode-robot/: Cargo.toml
crates/robotcode-robot/src/: lib.rs
crates/robotcode-robot/src/diagnostics/: document_cache.rs  entities.rs  errors.rs  import_resolver.rs  imports_manager.rs  keyword_finder.rs  library_doc.rs  mod.rs  namespace.rs  namespace_analyzer.rs  variable_scope.rs
crates/robotcode-robot/tests/: library_cache_test.rs
crates/robotcode-runner/: Cargo.toml
crates/robotcode-runner/src/: discover.rs  lib.rs  libdoc.rs  rebot.rs  run.rs  testdoc.rs
crates/robotcode-runner/tests/: discover_test.rs  runner_test.rs
crates/robotcode/src/: main.rs
docs/: migration-rust-binary.md
intellij-client/src/main/kotlin/dev/robotcode/robotcode4ij/: RobotCodeHelpers.kt
intellij-client/src/main/kotlin/dev/robotcode/robotcode4ij/lsp/: RobotCodeLanguageServer.kt
plan/: 01-analysis.md  02-architecture.md  03-phases.md  04-rf-python-bridge.md  05-performance.md  06-risks.md  README.md
python-bridge/: helper.py
vscode-client/extension/: debugmanager.ts  languageclientsmanger.ts  pythonmanger.ts
