[package]
name = "robotcode-analyze"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Batch static analysis CLI for Robot Framework files"

[dependencies]
robotcode-rf-parser = { path = "../robotcode-rf-parser" }
lsp-types.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile.workspace = true
