[package]
name = "robotcode-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and utilities for RobotCode (Robot Framework IDE toolkit)"

[dependencies]
lsp-types.workspace = true
ropey.workspace = true
dashmap.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
notify.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
percent-encoding.workspace = true

[dev-dependencies]
insta.workspace = true
tokio = { workspace = true }

[features]
default = []
