[package]
name = "robotcode-debugger"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Debug Adapter Protocol (DAP 1.51) server for Robot Framework"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
