[package]
name = "robotcode-python-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Python subprocess bridge for Robot Framework library introspection"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
