[package]
name = "robotcode-repl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Interactive REPL server for Robot Framework keyword evaluation"

[dependencies]
robotcode-python-bridge = { path = "../robotcode-python-bridge" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
