[package]
name = "robotcode-rf-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Robot Framework lexer and parser for RobotCode"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
logos = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
